--- a/Assignment5.ipynb
+++ b/Assignment5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGHYfVcQcW7iMinYML+o/C",
+      "authorship_tag": "ABX9TyONRbyHcu7jQSYU2IGReRKP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -72,7 +72,7 @@
         "id": "VPmDm8rexjx7",
         "outputId": "27504c19-82e6-484c-e049-8de88871b63b"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
         "id": "aDUwpAQByf-n",
         "outputId": "09f3da23-5afd-45c7-f11f-c5b5be88640d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
         "id": "obv3MW1u2Jyr",
         "outputId": "ad0e96ae-8297-4003-f549-069ba9b5e15c"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         "id": "coBPW3rH6xDM",
         "outputId": "f7f50a01-9ddf-4c43-c28e-7a2b788ffa36"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +220,7 @@
         "id": "zzRhPq0i7LEU",
         "outputId": "c2f6967c-b5f6-431a-827a-fc669d656d8d"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +254,7 @@
         "id": "R1GBcuA_7Tiv",
         "outputId": "574bc9a0-6bf9-4336-f4fa-a6745763adb3"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +288,7 @@
         "id": "V3j1G1Bi7n37",
         "outputId": "454a8760-a5ce-4709-fcb5-113a35ab9827"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +315,7 @@
         "id": "6HvOemmf8Dwo",
         "outputId": "20bcc3ca-a8b7-4f3e-f112-e6a8f5c2ecb8"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +350,7 @@
         "id": "8GhgtmXCE_0z",
         "outputId": "65b948eb-5b06-4a8e-8653-b59883b9e6a6"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +389,7 @@
         "id": "QSzDYaV4HZC9",
         "outputId": "73dc0ce8-724f-460e-e432-b5c8f6816122"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,8 +423,89 @@
       "metadata": {
         "id": "uhIx4lNoJg1J"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#factorial n\n",
+        "\n",
+        "def factorial(n):\n",
+        "    factor = list(range(1, n + 1))\n",
+        "    product = 1\n",
+        "    for number in factor:\n",
+        "        product *= number\n",
+        "    return product\n",
+        "\n",
+        "print(factorial(5))\n",
+        "print(factorial(10))\n",
+        "print(factorial(20))\n",
+        "print(factorial(50))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R5Q3rifPPZqU",
+        "outputId": "f184fc76-1f13-4a34-8be3-6c315a2836b4"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n",
+            "3628800\n",
+            "2432902008176640000\n",
+            "30414093201713378043612608166064768844377641568960512000000000000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Special factorial\n",
+        "def special_factorial(n):\n",
+        "    factor = list(range(1, n + 1))\n",
+        "    product = 1\n",
+        "    if n > 4:\n",
+        "        factor.remove(4)\n",
+        "    if n > 13:\n",
+        "        factor.remove(13)\n",
+        "    if n > 22:\n",
+        "        factor.remove(22)\n",
+        "    for number in factor:\n",
+        "        product *= number\n",
+        "    return product\n",
+        "\n",
+        "print(special_factorial(5))\n",
+        "print(special_factorial(10))\n",
+        "print(special_factorial(20))\n",
+        "print(special_factorial(50))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kdGTBd23hRzM",
+        "outputId": "30448abf-dc4c-4c6e-9e92-d797947d4f66"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n",
+            "907200\n",
+            "46786577080320000\n",
+            "26585745805693512275885146998308364374455980392448000000000000\n"
+          ]
+        }
+      ]
     }
   ]
 }
