--- a/Assignment6.ipynb
+++ b/Assignment6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOw4PF4GRUfJ4pJRoM2qX4",
+      "authorship_tag": "ABX9TyPBC0yYpITcmIDAa4dFb1dt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -255,7 +255,7 @@
       "source": [
         "#TIY 5-13\n",
         "#war\n",
-        "#work in progress. Workng on figuring out why deck size resets every round\n",
+        "#work in progress. Workng on figuring out the war game action\n",
         "import random\n",
         "\n",
         "play = True\n",
@@ -264,7 +264,9 @@
         "            6, 7, 7, 7, 7, 8, 8, 8, 8, 9, 9, 9, 9, 10, 10, 10, 10, 10, 10, 10, 10,\n",
         "            10, 10, 10, 10, 10, 10, 10, 10, 11, 11, 11, 11]\n",
         "\n",
-        "\n",
+        "    del plr1_ante\n",
+        "    del plr2_ante\n",
+        "    del ante_pool\n",
         "    deck1 = []\n",
         "    deck2 = []\n",
         "    while len(cards) > 0 :\n",
@@ -274,13 +276,15 @@
         "        p2card = cards.pop()\n",
         "        deck2.append(p2card)\n",
         "\n",
-        "    round = True\n",
-        "    while round == True:\n",
         "        player1_deck = deck1.copy()\n",
         "        player2_deck = deck2.copy()\n",
+        "    round = True\n",
+        "    while round == True:\n",
+        "#        player1_deck = deck1.copy()\n",
+        "#        player2_deck = deck2.copy()\n",
         "\n",
-        "        card1 = random.choice(player1_deck)\n",
-        "        card2 = random.choice(player2_deck)\n",
+        "        card1 = player1_deck.pop(0)\n",
+        "        card2 = player2_deck.pop(0)\n",
         "\n",
         "        print(\"player One' Card\")\n",
         "        if card1 == 11:\n",
@@ -315,7 +319,8 @@
         "        #print(card1)\n",
         "        #print(card2)\n",
         "        if card1 > card2:\n",
-        "            player1_deck.append(player2_deck.pop(card2))\n",
+        "            player1_deck.append(card1)\n",
+        "            player1_deck.append(card2)\n",
         "        #    deck1.append(card2)\n",
         "            print(\"\\nPlayer One wins\")\n",
         "            again = input(\"another round?\")\n",
@@ -325,7 +330,8 @@
         "                round = True\n",
         "\n",
         "        elif card1 < card2:\n",
-        "            player2_deck.append(player1_deck.pop(card1))\n",
+        "            player2_deck.append(card1)\n",
+        "            player2_deck.append(card2)\n",
         "\n",
         "            print(\"\\nPlayer Two wins\")\n",
         "            again = input(\"another round?\")\n",
@@ -335,11 +341,67 @@
         "                round = True\n",
         "\n",
         "        elif card1 == card2:\n",
-        "            print(\"\\nTie\")\n",
-        "        if len(deck1) < 0:\n",
+        "            print(\"\\nWar!\")\n",
+        "            plr1_ante = []\n",
+        "            plr2_ante = []\n",
+        "\n",
+        "            ante_pool = []\n",
+        "            plr1_ante = player1_deck.pop(0), player1_deck.pop(1), player1_deck.pop(2)\n",
+        "            plr1_ante = list(plr1_ante)\n",
+        "            print(f\"Player Ones ante {plr1_ante}\")\n",
+        "\n",
+        "            plr2_ante = player2_deck.pop(0), player2_deck.pop(1), player2_deck.pop(2)\n",
+        "            plr2_ante = list(plr2_ante)\n",
+        "            print(f\"Player Twos ante {plr2_ante}\")\n",
+        "            plr1_card = player1_deck.pop(0)\n",
+        "            print(f\"1, 2, 3, and flip {plr1_card}\")\n",
+        "            plr2_card = player2_deck.pop(0)\n",
+        "            print(f\"1, 2, 3, and flip {plr2_card}\")\n",
+        "            ante_pool.append(plr1_ante)\n",
+        "            ante_pool.append(plr2_ante)\n",
+        "            ante_pool.append(plr1_card)\n",
+        "            ante_pool.append(plr2_card)\n",
+        "\n",
+        "            if plr1_card > plr2_card:\n",
+        "                print(\"Player One wins the war\")\n",
+        "\n",
+        "                go = len(ante_pool)\n",
+        "                while go is True:\n",
+        "                    gain = ante_pool.pop(0)\n",
+        "                    player1_deck.append(gain)\n",
+        "                    if go < 0:\n",
+        "                        go = False\n",
+        "\n",
+        "                again = input(\"another round?\")\n",
+        "                if again != 'yes':\n",
+        "                    round = False\n",
+        "                else:\n",
+        "                    round = True\n",
+        "\n",
+        "            if plr1_card < plr2_card:\n",
+        "                print(\"Player Two wins the war\")\n",
+        "\n",
+        "                go = len(ante_pool)\n",
+        "                while go is True:\n",
+        "                    gain = ante_pool.pop(0)\n",
+        "                    player2_deck.append(gain)\n",
+        "                    if go < 0:\n",
+        "                        go = False\n",
+        "\n",
+        "                again = input(\"another round?\")\n",
+        "                if again != 'yes':\n",
+        "                    round = False\n",
+        "                else:\n",
+        "                    round = True\n",
+        "\n",
+        "            if plr1_card == plr2_card:\n",
+        "                print(\"Another War!\")\n",
+        "                continue\n",
+        "\n",
+        "        if len(player1_deck) < 0:\n",
         "            print(\"Player Two has won the game!\")\n",
         "        play = False\n",
-        "        if len(deck2) < 0:\n",
+        "        if len(player2_deck) < 0:\n",
         "            print(\"Player One has won the game!\")\n",
         "            round = False\n",
         "        play = False"
@@ -349,70 +411,76 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pBSZ8NhnyEbg",
-        "outputId": "a37de1b9-d36e-458c-bd85-3e726aa1cc58"
+        "outputId": "95f44e26-6d0a-491f-adaa-7d491603cb04"
       },
-      "execution_count": 359,
+      "execution_count": 30,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "player One' Card\n",
+            "10\n",
+            "Player Twos Card\n",
+            "K\n",
+            "\n",
+            "War!\n",
+            "Player Ones ante [10, 3, 11]\n",
+            "Player Twos ante [6, 3, 9]\n",
+            "1, 2, 3, and flip 9\n",
+            "1, 2, 3, and flip 2\n",
+            "Player One wins the war\n",
+            "another round?yes\n",
+            "player One' Card\n",
+            "K\n",
+            "Player Twos Card\n",
+            "4\n",
+            "\n",
+            "Player One wins\n",
+            "another round?yes\n",
+            "player One' Card\n",
             "4\n",
             "Player Twos Card\n",
+            "3\n",
+            "\n",
+            "Player One wins\n",
+            "another round?yes\n",
+            "player One' Card\n",
             "J\n",
+            "Player Twos Card\n",
+            "5\n",
+            "\n",
+            "Player One wins\n",
+            "another round?yes\n",
+            "player One' Card\n",
+            "K\n",
+            "Player Twos Card\n",
+            "7\n",
+            "\n",
+            "Player One wins\n",
+            "another round?yes\n",
+            "player One' Card\n",
+            "8\n",
+            "Player Twos Card\n",
+            "8\n",
+            "\n",
+            "War!\n",
+            "Player Ones ante [10, 10, 11]\n",
+            "Player Twos ante [6, 7, 2]\n",
+            "1, 2, 3, and flip 6\n",
+            "1, 2, 3, and flip 9\n",
+            "Player Two wins the war\n",
+            "another round?yes\n",
+            "player One' Card\n",
+            "J\n",
+            "Player Twos Card\n",
+            "A\n",
             "\n",
             "Player Two wins\n",
-            "another round?no\n"
+            "another round?n\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#TIY 5-13\n",
-        "#blackjack\n",
-        "\n",
-        "import random\n",
-        "\n",
-        "card1 = random.randrange(1, 12)\n",
-        "card2 = random.randrange(1, 12)\n",
-        "dealer_cards = (card1, card2)\n",
-        "\n",
-        "print(cards)\n",
-        "print(dealer_cards)"
-      ],
-      "metadata": {
-        "id": "QrJcFP8wDfG-",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5758bc72-ee6f-4bdd-953e-24797ae86fe9"
-      },
-      "execution_count": 140,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "10\n",
-            "(1, 7)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "J, J, J, J, Q,\n",
-        "         Q, Q, Q, K, K, K, K, A, A, A, A"
-      ],
-      "metadata": {
-        "id": "1RXLAkka6wT9"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
